add internationalization for messages and status codes

--- a/app/views/contact_mailer/contact_detail_email.html.erb
+++ b/app/views/contact_mailer/contact_detail_email.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Contact Information Details</h1>
+    <h1><%= I18n.t('contact.subject') %></h1>
     <ul style="letter-spacing: 0.1em;">
       <% @contact_fields.each do |contact_field| %>
         <li>
